--- a/test.html
+++ b/test.html
@@ -10,5 +10,9 @@
     <h1>TEST</h1>
     <p>A line added from dev branch.</p>
     <p>practice fixing conflict.</p>
+    <p>practice fixing conflict.</p>
+    <p>practice fixing conflict.</p>
+    <p>practice fixing conflict.</p>
+    <p>practice fixing conflict.</p>
   </body>
 </html>
