--- a/test.html
+++ b/test.html
@@ -14,5 +14,7 @@
     <p>practice fixing conflict.</p>
     <p>practice fixing conflict.</p>
     <p>practice fixing conflict.</p>
+
+    <h2>TEST2</h2>
   </body>
 </html>
